Fixing layout issues

--- a/src/app/material/email-sent/email-sent.component.scss
+++ b/src/app/material/email-sent/email-sent.component.scss
@@ -1,22 +1,14 @@
 .chart {
     width: 100%;
-    height: 335px;
-    max-height: 335px;
+    height: 325px;
+    max-height: 325px;
     display: flex;
 }
-@media (min-width: 1115px) {
+@media (max-width: 1088px) {
     .chart {
         width: 100%;
-        height: 325px;
-        max-height: 325px;
-        display: flex;
-    }
-}
-@media (max-width: 1062px) {
-    .chart {
-        width: 100%;
-        height: 525px;
-        max-height: 525px;
+        height: 343px;
+        max-height: 343px;
         display: flex;
     }
 }
