--- a/src/app/material/month-earning/month-earning.component.scss
+++ b/src/app/material/month-earning/month-earning.component.scss
@@ -7,5 +7,4 @@
 .container {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
 }
